--- a/DotNetCoreSqlDb/Views/Todos/Delete.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Delete.cshtml
@@ -11,6 +11,12 @@
     <h4>Todo</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FamilyName)
+        </dt>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
