--- a/DotNetCoreSqlDb/Views/Todos/Index.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DotNetCoreSqlDb.Models.Todo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AZ305";
 }
 
 <h1>Index</h1>
@@ -12,6 +12,12 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FamilyName)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
@@ -24,6 +30,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FamilyName)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
