--- a/DotNetCoreSqlDb/Views/Todos/Details.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Details.cshtml
@@ -13,9 +13,15 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FamilyName)
         </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FamilyName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
